--- a/DerbyScoreBoard/en.lproj/MainStoryboard.storyboard
+++ b/DerbyScoreBoard/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -240,6 +240,13 @@
                                     <outlet property="delegate" destination="2" id="chn-J3-G7v"/>
                                 </connections>
                             </pickerView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UDW-Wz-SJs">
+                                <rect key="frame" x="108" y="53" width="109" height="59"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -257,6 +264,7 @@
                         <outlet property="jamClockLabel" destination="10o-Wj-neH" id="tiw-LE-AEC"/>
                         <outlet property="jamTimeOutBtn" destination="liN-S0-v0l" id="oQs-7t-nTm"/>
                         <outlet property="officialTimeOutBtn" destination="vbm-XF-Dnf" id="8XB-xX-jXS"/>
+                        <outlet property="preJamClockLabel" destination="UDW-Wz-SJs" id="xoj-gh-G05"/>
                         <outlet property="visitorJamScoreTextField" destination="9iF-Vh-k0U" id="1f8-9N-GL5"/>
                         <outlet property="visitorJammerPicker" destination="Hn5-GP-HJ1" id="bk3-cF-7jD"/>
                         <outlet property="visitorTOCountLabel" destination="Pyn-ur-Fft" id="Jvf-ym-jGN"/>
